removing interactjs and adding konvajs, minor changes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <head>
     <title>Pairing Table</title>
-    <script src="./interact.js"></script>
+    <script src="https://cdn.rawgit.com/konvajs/konva/2.0.2/konva.min.js"></script>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    
+    <div id="container">
+        
+    </div>
     <script src="./index.js"></script>
-
-
 </body>
